--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ script:
     - mendertesting/check_commits.sh
     # Check licenses
     - mendertesting/check_license.sh
+    # Build docker image
+    - docker build --tag=mender-dist-packages .
+    # Run docker container
+    - mkdir -p output && docker run -v $(pwd)/output:/output --rm mender-dist-packages
