Add script to prepare Raspbian SD image for testing
Downloads the image, enables SSH on it, and gets the dependencies.

Changelog: None

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 output/
+
+# Files downloaded through prepare-raspbian-img.sh
+tests/docker-files/2019-04-08-raspbian-mender-testing.img
+tests/docker-files/kernel-qemu-4.14.79-stretch
+tests/docker-files/versatile-pb.dtb
