First version of integration tests for client package (prototype)
Basic tests for mender client package: install, configure, start, stop,
remove and purge. Plus required fixtures to start/stop docker and to get
the SSH connection with the client.

This prototype requires refactoring and clean up of few hardcoded
strings, but works as a PoC to test Travis run

Changelog: Title

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+# Directory where the packages are extracted
 output/
+
+# Python files
+tests/__pycache__
 
 # Files downloaded through prepare-raspbian-img.sh
 tests/docker-files/2019-04-08-raspbian-mender-testing.img
