Upgrade Travis VM to Ubuntu Xenial (16.04)
Changelog: None

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: minimal
 git:
     depth: false
 
-dist: trusty
+dist: xenial
 
 before_script:
     - git clone git://github.com/mendersoftware/mendertesting
