Switch testing over to use mender-test-containers.
Changelog: None

Signed-off-by: Kristian Amlie <kristian.amlie@northern.tech>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ script:
     # Run docker container
     - mkdir -p output && docker run -v $(pwd)/output:/output --rm mender-dist-packages-builder
     # Tests dependencies
-    - (cd tests && ./docker-build)
+    - (cd tests/mender_test_containers/docker/ && ./docker-build-raspbian)
     # Test execution
     - (cd tests && python3 -m pytest -v)
