--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9)
 
 Package: mender-client
 Conflicts: mender
-Architecture: armhf
+Architecture: any
 Depends: libc6 (>= 2.12), liblzma5 (>= 5.1)
 Description: Mender client
  Mender is an open source over-the-air (OTA) software updater for embedded Linux devices.
