--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@
 
 override_dh_auto_build:
 	make CGO_CFLAGS="${CGO_CFLAGS}" CGO_LDFLAGS="${CGO_LDFLAGS}" CC=${CC} \
-	GOOS=linux GOARCH=arm GOARM=6 CGO_ENABLED=1 build
+	GOOS=linux CGO_ENABLED=1 build
 
 override_dh_auto_test:
 	true
