Run mender setup as a post intall step from the deb package
For non previously configured devices (this is, a system that already
has a /etc/mender/mender.conf file), the deb package will invoke mender
setup wizard to to the configuration.

For non interactive installs, we use the default production config,
requiring user interaction at a later point.

Changelog: Title

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,9 @@ override_dh_auto_build:
 	make CGO_CFLAGS="${CGO_CFLAGS}" CGO_LDFLAGS="${CGO_LDFLAGS}" CC=${CC} \
 	GOOS=linux CGO_ENABLED=1 build
 
+override_dh_auto_install:
+	DESTDIR=debian/mender-client make install-bin install-identity-scripts install-inventory-scripts install-modules install-systemd
+
 override_dh_auto_test:
 	true
 
