Enable systemd after successful install and configure of mender-client
Copy support/mender.service to debian/mender-client.service and let
debhelper do the rest of the magic.

Note the change in the name: the systemd service shall have the same
name as the package. We had to change this soon or later as an step
towards unifying with Debian upstream recipe.

Changelog: Title

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/debian/rules
+++ b/debian/rules
@@ -8,15 +8,10 @@ override_dh_auto_build:
 	GOOS=linux CGO_ENABLED=1 build
 
 override_dh_auto_install:
-	DESTDIR=debian/mender-client make install-bin install-identity-scripts install-inventory-scripts install-modules install-systemd
+	# All install targets except install-systemd
+	DESTDIR=debian/mender-client make install-bin install-identity-scripts install-inventory-scripts install-modules
 
 override_dh_auto_test:
-	true
-
-override_dh_systemd_enable:
-	true
-
-override_dh_systemd_start:
 	true
 
 override_dh_strip:
