Fixes in deb recipe to adapt to latest changes in mender master
Basically:
- Rename of parameter --hosted-mender to --mender-professional
- Partial restore of install-conf in Makefile (with artifact_info file)
- Addition of demo certificate with install-examples Makefile target

Changelog: None

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,8 @@ override_dh_auto_build:
 
 override_dh_auto_install:
 	# All install targets except install-systemd
-	DESTDIR=debian/mender-client make install-bin install-identity-scripts install-inventory-scripts install-modules
+	DESTDIR=debian/mender-client make install-bin install-conf install-identity-scripts \
+	install-inventory-scripts install-modules install-examples
 
 override_dh_auto_test:
 	true
