Do not allow acceptance test failures anymore
This was a temporary solution to be able to publish 2.1.x mender client
packages, but allowing them to fail for so long has made the master (and
therefore 2.2.x) tests to break.

Until we get QA-123, if we need to publish a new deb package for an old
mender client (2.1.x) we can use this new SKIP_TESTS build variable.

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ variables:
   MENDER_VERSION: "master"
   S3_BUCKET_NAME: "mender"
   S3_BUCKET_SUBPATH: "dist-packages/debian"
+  # Set to true to skip tests (i.e. old Mender client build). See QA-123
+  SKIP_TESTS: "false"
 
 include:
   - project: 'Northern.tech/Mender/mendertesting'
@@ -30,10 +32,10 @@ build:
     paths:
       - output/*
 
-# The tests are not versionized: they will fail for old Mender deb packages
-# Allow failures to be able to publish the deb packages. Proper fix in QA-123
 test:acceptance:
-  allow_failure: true
+  except:
+    variables:
+      - $SKIP_TESTS == "true"
   stage: test
   image: docker:18-dind
   tags:
