MEN-3601: Add OpenSSL dependency on Debian package
Updated the build script and requirements, as well as the debian control
file shipped in the package.

Recipe for master differs now latest releases, so branch out these into
their own debian folder.

Modified the tests so that the install the package dependencies on
failure.

Signed-off-by: Lluis <lluis.campos@northern.tech>

--- a/debian-2.2.x/control
+++ b/debian-2.2.x/control
@@ -8,6 +8,6 @@ Build-Depends: debhelper (>= 9)
 Package: mender-client
 Conflicts: mender
 Architecture: any
-Depends: libc6 (>= 2.12), liblzma5 (>= 5.1), libssl1.1 (>= 1.1)
+Depends: libc6 (>= 2.12), liblzma5 (>= 5.1)
 Description: Mender client
  Mender is an open source over-the-air (OTA) software updater for embedded Linux devices.
