Update Copyright to 2020 and maintainer e-mail.
Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/debian-master/control
+++ b/debian-master/control
@@ -1,5 +1,5 @@
 Source: mender-client
-Maintainer: Mender Team <menderall@northern.tech>
+Maintainer: Mender Team <mender@northern.tech>
 Section: misc
 Priority: optional
 Standards-Version: 3.9.2
