QA-214: Publish a 'latest' alias Mender deb package
This enables publishing a 'latest' package, which is always pointing to the
latest released client version.

The latest released Mender client is uploaded to s3, under the alias 'latest',
and hence, by following our latest link, you can always obtain the most recently
released Mender client.

Signed-off-by: Ole Petter <ole.orhagen@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,9 +68,9 @@ publish:s3:
     - build
   before_script:
     - apt update && apt install -yyq awscli
+    - deb_version=$(cat output/mender-client-deb-version)
   script:
     - echo "Publishing ${MENDER_VERSION} packages to S3"
-    - deb_version=$(cat output/mender-client-deb-version)
     # For master packages, the Debian version is "0.0~git[iso-date].[git-hash]-1" and we make a copy named "master" for GUI to use
     - for arch in amd64 arm64 armhf; do
         aws s3 cp output/mender-client_${deb_version}_${arch}.deb
@@ -86,3 +86,11 @@ publish:s3:
       done
   only:
     - master
+
+publish:s3:latest:
+  extends: publish:s3
+  only:
+    variables:
+      - $MENDER_VERSION =~ /[0-9]+\.[0-9]+\.[0-9]+/
+  before_script:
+    - deb_version=latest
