--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,4 +93,5 @@ publish:s3:latest:
     variables:
       - $MENDER_VERSION =~ /[0-9]+\.[0-9]+\.[0-9]+/
   before_script:
+    - apt update && apt install -yyq awscli
     - deb_version=latest
