--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ test:acceptance:
   script:
     - apk --update --no-cache add python3 gcc openssh make openssl-dev libffi-dev libc-dev python3-dev
     - cd tests
-    - pip3 install --upgrade -r requirements.txt
+    - pip3 install -r requirements.txt
     - mender_client_deb_version=$(cat ${CI_PROJECT_DIR}/output/mender-client-deb-version)
     - python3 -m pytest -v --mender-client-version $MENDER_VERSION --mender-client-deb-version $mender_client_deb_version
 
