MEN-4490: mender-client: Install /etc/mender/scripts/version file
Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/recipes/mender-client/debian-master/rules
+++ b/recipes/mender-client/debian-master/rules
@@ -12,6 +12,10 @@ install_targets = $(shell egrep ^install\-.*: Makefile | grep -v install-systemd
 override_dh_auto_install:
 	DESTDIR=debian/mender-client make $(install_targets)
 
+	# Install scripts/version file
+	install -d -m 755 debian/mender-client/etc/mender/scripts/
+	echo -n "3" > debian/mender-client/etc/mender/scripts/version
+
 override_dh_auto_test:
 	true
 
