Make new packages for mender-configure timezone and rpi-demo scripts.
Signed-off-by: Kristian Amlie <kristian.amlie@northern.tech>

--- a/recipes/mender-configure/debian-master/control
+++ b/recipes/mender-configure/debian-master/control
@@ -11,3 +11,17 @@ Depends: dbus, curl, mender-client (>=2.5.0)
 Description: Mender Configure
  Mender Configure is a Mender add-on which enhances the Mender Client providing an Update
  Module to configure the device
+
+Package: mender-configure-timezone
+Architecture: all
+Depends: mender-configure
+Description: Mender Configure Timezone
+ Mender Configure Timezone is an add-on to Mender Configure which enables configuration
+ of timezone on the device
+
+Package: mender-configure-demo
+Architecture: all
+Depends: mender-configure, mender-configure-timezone
+Description: Mender Configure Demo
+ Mender Configure Demo is an add-on to Mender Configure which enables some demo
+ configurations on the device
