--- a/recipes/mender-client/debian-master/control
+++ b/recipes/mender-client/debian-master/control
@@ -11,3 +11,12 @@ Architecture: any
 Depends: libc6 (>= 2.12), libglib2.0-0 (>=2.50), liblzma5 (>= 5.1), libssl1.1 (>= 1.1)
 Description: Mender client
  Mender is an open source over-the-air (OTA) software updater for embedded Linux devices.
+
+Package: mender-client-dev
+Architecture: all
+Depends: mender-client (= ${binary:Version})
+Description: Mender client development files
+ Mender is an open source over-the-air (OTA) software updater for embedded Linux devices.
+ .
+ This package contains the development files:
+ * D-Bus API interface files
