--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -146,10 +146,10 @@ publish:s3:apt-repo:
     -     reprepro --keepunreferencedfiles include stable $change_file
     -   done
     - fi
-    # Include everything else to experimental. Allow failures to ignore wrong
-    # distribution (final tags) or to ignore checksum mismatches (master rebuilds)
+    # Include everything else to experimental.
+    # Packages names are unique: we append build number
     - for change_file in $(ls ${CI_PROJECT_DIR}/output/*.changes); do
-    -   reprepro --keepunreferencedfiles include experimental $change_file || true
+    -   reprepro --keepunreferencedfiles include experimental $change_file
     - done
     # Upload to bucket
     - aws s3 sync db s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/db
