--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,27 +130,119 @@ publish:s3:apt-repo:
     - aws s3 cp --recursive s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/dists dists
     - aws s3 cp --recursive s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/pool pool
   script:
-    # If build from final tag, include in stable
-    - if echo "${MENDER_VERSION}" | egrep -q '^[0-9]+\.[0-9]+\.[0-9]+$'; then
+    # Bash function to check if the string is a final tag
+    - |
+      function is_final_tag () {
+        version=$1
+        echo "${version}" | egrep -q '^[0-9]+\.[0-9]+\.[0-9]+$'
+        return $?
+      }
+    # Bash function to compare two semantic versions, returns: 0 (=), 1(>) or 2(<)
+    #  * "master" always evaluates to greater than any other version
+    #  * "build" versions like 1.3.4-build for are evaluated as 1.2.3
+    # Original source: https://stackoverflow.com/a/4025065
+    - |
+      function vercomp () {
+        if [[ $1 == $2 ]]; then
+          return 0
+        fi
+        if [[ $1 == "master" ]]; then
+          return 1
+        fi
+        if [[ $2 == "master" ]]; then
+          return 2
+        fi
+        local IFS=.
+        local i ver1=($1) ver2=($2)
+        # fill empty fields in ver1 with zeros
+        for ((i=${#ver1[@]}; i<${#ver2[@]}; i++)); do
+          ver1[i]=0
+        done
+        for ((i=0; i<${#ver1[@]}; i++)); do
+          if [[ -z ${ver2[i]} ]]; then
+            # fill empty fields in ver2 with zeros
+            ver2[i]=0
+          fi
+          if ((10#${ver1[i]} > 10#${ver2[i]})); then
+            return 1
+          fi
+          if ((10#${ver1[i]} < 10#${ver2[i]})); then
+            return 2
+          fi
+        done
+        return 0
+      }
+    # Bash function to check if the given version for the given package is newer
+    # than the current version of that package in the APT repo (stable)
+    - |
+      function is_newer_version() {
+        package_name=$1
+        package_version=$2
+
+        current_version=$(reprepro --architecture amd64 --list-format '${version}' list stable ${package_name})
+        if [ -z "${current_version}" ]; then
+          # Package doesn't exist, so we assume is "newer"
+          return 0
+        fi
+        current_version_semver=$(echo $current_version | cut -d"-" -f1 )
+
+        vercomp $package_version $current_version_semver
+        if [ $? -eq 1 ]; then
+          return 0
+        fi
+        return 1
+      }
+
+    # For each package:
+    #  * if version is newer and is a final tag
+    #      --> include to stable via reprepro
+    #  * if version is newer but not final tag (master of build tags)
+    #      --> include to experimental via reprepro
+    #  * else version is older
+    #      --> manually copy to pool unprocessed (and unsigned) by reprepro
+
+    # mender-client
+    - if is_newer_version mender-client ${MENDER_VERSION}; then
+    -   if is_final_tag ${MENDER_VERSION}; then
+    -     codename=stable
+    -   else
+    -     codename=experimental
+    -   fi
     -   for change_file in $(ls ${CI_PROJECT_DIR}/output/mender-client_*.changes); do
-    -     reprepro --keepunreferencedfiles include stable $change_file
+    -     reprepro --keepunreferencedfiles include ${codename} ${change_file}
     -   done
+    - else
+    -   cp mender-client*.deb pool/main/m/mender-client/
     - fi
-    - if echo "${MENDER_CONNECT_VERSION}" | egrep -q '^[0-9]+\.[0-9]+\.[0-9]+$'; then
+
+    # mender-connect
+    - if is_newer_version mender-connect ${MENDER_CONNECT_VERSION}; then
+    -   if is_final_tag ${MENDER_CONNECT_VERSION}; then
+    -     codename=stable
+    -   else
+    -     codename=experimental
+    -   fi
     -   for change_file in $(ls ${CI_PROJECT_DIR}/output/mender-connect_*.changes); do
-    -     reprepro --keepunreferencedfiles include stable $change_file
+    -     reprepro --keepunreferencedfiles include ${codename} ${change_file}
     -   done
+    - else
+    -   cp mender-connect*.deb pool/main/m/mender-connect/
     - fi
-    - if echo "${MENDER_CONFIGURE_VERSION}" | egrep -q '^[0-9]+\.[0-9]+\.[0-9]+$'; then
+
+    # mender-configure
+    - if is_newer_version mender-configure ${MENDER_CONFIGURE_VERSION}; then
+    -   if is_final_tag ${MENDER_CONFIGURE_VERSION}; then
+    -     codename=stable
+    -   else
+    -     codename=experimental
+    -   fi
     -   for change_file in $(ls ${CI_PROJECT_DIR}/output/mender-configure_*.changes); do
-    -     reprepro --keepunreferencedfiles include stable $change_file
+    -     reprepro --keepunreferencedfiles include ${codename} ${change_file}
     -   done
+    - else
+    -   cp mender-configure*.deb pool/main/m/mender-configure/
     - fi
-    # Include everything else to experimental.
-    # Packages names are unique: we append build number
-    - for change_file in $(ls ${CI_PROJECT_DIR}/output/*.changes); do
-    -   reprepro --keepunreferencedfiles include experimental $change_file
-    - done
+
     # Upload to bucket
     - aws s3 sync db s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/db
     - aws s3 sync pool s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/pool
