--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -2,3 +2,5 @@
 #  see https://github.com/pytest-dev/pytest/issues/1585
 [pytest]
 addopts = --capture=no
+markers =
+    commercial: Run the commercial debian package tests with the flag --commercial-tests yes
