pipeline: Set stage in publish:s3:mender-monitor job
Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -347,6 +347,7 @@ publish:production:s3:scripts:install-mender-sh:
       - production
 
 publish:s3:mender-monitor:
+  stage: publish
   image: debian:buster
   only:
     - master
